--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@graphql-tools/merge": "^9.0.20",
     "bcryptjs": "^3.0.2",
     "connect-mongodb-session": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "graphql": "^16.10.0",
     "graphql-passport": "^0.6.8",
