--- a/client/package.json
+++ b/client/package.json
@@ -11,20 +11,25 @@
   "dependencies": {
     "@apollo/client": "^3.13.1",
     "@hookform/resolvers": "^4.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "graphql": "^16.10.0",
+    "lucide-react": "^0.476.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
