--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.1",
+    "@apollo/experimental-nextjs-app-support": "^0.11.9",
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
