--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphql-tools/merge": "^9.0.20",
     "bcryptjs": "^3.0.2",
     "connect-mongodb-session": "^5.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
